unpackaged/main/default/objects/ET_Pricing_Profit_Calculation_Setup__c/ET_Pricing_Profit_Calculation_Setup__c.object-meta.xml
<CustomObject>
    <label>Vehicle Profit Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Profit Calculation Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Profit Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>