unpackaged/main/default/objects/ET_Pricing_Profit_Calculation_Setup__c/fields/ET_Pricing_Policy_Rate_3_year__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Policy_Rate_3_year__c</fullName>
    <label>Pricing Policy Rate(3 year)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>