unpackaged/main/default/objects/ET_Pricing_Profit_Calculation_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Api_Name__c</columns>
    <columns>ET_Pricing_Policy_Rate_1_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_2_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_3_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_4_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_5_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_6_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_7_year__c</columns>
    <columns>ET_Pricing_Policy_Rate_8_year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>